...
                                                      .fromSTEB(
                                                          0.0, 0.0, 0.0, 16.0),
                                                  child: SizedBox(
                                                    width: double.infinity,
                                                    child: TextFormField(
                                                      key: const ValueKey(
                                                          'emailAddress_qcto'),
                                                      controller: _model
                                                          .emailAddressTextController,
                                                      focusNode: _model
                                                          .emailAddressFocusNode,
                                                      onChanged: (_) =>
                                                          EasyDebounce.debounce(
...
                                                      .fromSTEB(
                                                          0.0, 0.0, 0.0, 16.0),
                                                  child: SizedBox(
                                                    width: double.infinity,
                                                    child: TextFormField(
                                                      key: const ValueKey(
                                                          'password_3v8d'),
                                                      controller: _model
                                                          .passwordTextController,
                                                      focusNode: _model
                                                          .passwordFocusNode,
                                                      autofocus: false,
                                                      autofillHints: const [
...
                                                    padding:
                                                        const EdgeInsetsDirectional
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: FFButtonWidget(
                                                      key: const ValueKey(
                                                          'Button_scn6'),
                                                      onPressed:
                                                          (_model.clicks! >= 5)
                                                              ? null
                                                              : () async {
                                                                  logFirebaseEvent(
                                                                      'LOGIN_PAGE_PAGE_SIGN_IN_BTN_ON_TAP');
...
