...
                        Row(
                          mainAxisSize: MainAxisSize.max,
                          children: [
                            Align(
                              alignment: const AlignmentDirectional(-1.0, 0.0),
                              child: Text(
                                key: const ValueKey('Text_f0f3'),
                                'My Account',
                                style: FlutterFlowTheme.of(context)
                                    .headlineMedium
                                    .override(
                                  fontFamily: 'Inter Tight',
                                  color: Colors.white,
...
                                          color: FlutterFlowTheme.of(context)
                                              .primaryText,
                                          letterSpacing: 0.0,
                                        ),
                                  ),
                                  FFButtonWidget(
                                    key: const ValueKey('StepNavButton_c7ty'),
                                    onPressed: () async {
                                      logFirebaseEvent(
                                          'ACCOUNT_PAGE_PAGE_StepNavButton_ON_TAP');
                                      logFirebaseEvent(
                                          'StepNavButton_navigate_to');

...
